syntax = "proto3";

package satellite.authentication.v1;

option go_package = "github.com/CityBear3/satellite/pb/authentication/v1;authentication";

service AuthenticationService {
  rpc AuthenticateClient(AuthenticateRequest) returns (AuthenticateResponse);
  rpc AuthenticateDevice(AuthenticateRequest) returns (AuthenticateResponse);
}

message AuthenticateRequest {
  string id = 1;
  string secret = 2;
}

message AuthenticateResponse {
  string token = 1;
}